# rustboycolor

./: .dockerignore  .gitignore  .travis.yml  Cargo.toml  Dockerfile  LICENSE  README.md  config.toml  docker-compose.yml
.github/workflows/: ci.yml  tests.yml
src/: apu.rs  bios.rs  constants.rs  cpu.rs  cpu_cb_ops.rs  cpu_ops.rs  gpu.rs  irq.rs  joypad.rs  keypad.rs  lib.rs  mbc.rs  memory.rs  mmu.rs  registers.rs  serial.rs
src/apu/: channel1.rs  channel2.rs  channel3.rs  channel4.rs  envelope.rs  sweep.rs  wave.rs
src/cpu/: cb_ops.rs  mod.rs  ops.rs  test.rs
src/cpu/test/: alu16.rs  alu8.rs  cb.rs  control.rs  load.rs  mod.rs
src/gpu/: background.rs  cgb.rs  mod.rs  palette.rs  registers.rs  sprite.rs  tile.rs
src/mbc/: mbc0.rs  mbc1.rs  mod.rs
src/mmu/: timers.rs
tests/: backend_input.toml  cpu_instrs.rs
