[package]
name = "rustboycolor"
version = "0.1.0"
authors = ["pierreyoda <pierreyoda@users.noreply.github.com>"]
autobins = false
edition = "2021"

[[bin]]
name = "rustboycolor"
path = "src/bin/main.rs"

[lib]
name = "rustboylib"
path = "src/lib.rs"

[features]
default = []
tracing = []

[dependencies]
log = "0.4.27"
toml = "0.8.22"

[dependencies.clap]
version = "4.5.38"
features = ["derive", "wrap_help"]

[dependencies.sdl2]
version = "0.37.0"
default-features = false
features = ["ttf"]
