[package]
name = "rustboycolor"
version = "0.1.0"
authors = ["pierreyoda <pierreyoda@users.noreply.github.com>"]
autobins = false
edition = "2021"

[[bin]]
name = "rustboycolor"
path = "src/bin/main.rs"

[lib]
name = "rustboylib"
path = "src/lib.rs"

[features]
default = []
tracing = []

[dependencies]
log = "0.4.29"

[dependencies.clap]
version = "4.5.53"
features = ["derive", "wrap_help"]

[dependencies.toml]
version = "0.9.9"
default-features = false
features = ["std", "serde", "parse"]

[dependencies.sdl2]
version = "0.38.0"
default-features = false
features = ["ttf"]
